# Motes

./: .gitmodules  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  motes.pro  notes_qt_test.pro  settingswidget.h
include/: CloudControl.h  HttpUtils.h  json.hpp  main.h  picosha2.h
libraries/todoom/include/: Database.h  main.h
libraries/todoom/src/: CloudControl.cpp  main.cpp
src/: CloudControl.cpp  Database.cpp  HttpUtils.cpp  main.cpp  mainwindow.cpp  mainwindow.h  settings_form.ui  settingswidget.cpp
